--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,17 @@ name: CI
 
 on: [push]
 
+env:
+  BLASTDB: blast-db
+  BLAST_DATABASES: "ref_viruses_rep_genomes Betacoronavirus"
+
 jobs:
   build:
     runs-on: ubuntu-20.04
     strategy:
       max-parallel: 8
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -16,6 +20,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Python prerequisites
+      run: pip3 install wheel flake8
+    - name: Install BLAST
+      run: sudo apt-get install --yes ncbi-blast+
     - name: Install
       run: make install
     - name: Lint
