--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: recursive
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
@@ -26,7 +28,7 @@ jobs:
       run: sudo apt-get install --yes ncbi-blast+
     - name: Add placeholder file
       run: cp test/sample_wikipedia_extract.json wikipedia_extracts.json
-    - name: Install
+    - name: Build and install package
       run: make install
     - name: Lint
       run: make lint
