--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 8
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v1
@@ -24,12 +24,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Python prerequisites
       run: pip3 install wheel flake8 cython
+    - name: Lint
+      run: make lint
     - name: Install BLAST
       run: sudo apt-get install --yes ncbi-blast+
     - name: Add placeholder file
       run: cp test/sample_wikipedia_extract.json wikipedia_extracts.json
-    - name: Lint
-      run: make lint
     - name: Build and install package
       run: make install
     - name: Test
