--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push]
 env:
   BLASTDB: blast-db
   BLAST_DATABASES: "ref_viruses_rep_genomes ref_prok_rep_genomes Betacoronavirus"
+  FETCH_REFSEQ_ASSEMBLIES: "Mumps orthorubulavirus"
 
 jobs:
   build:
