--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "marisa-trie"]
-	path = marisa-trie
+	path = taxoniq/vendored/marisa-trie
 	url = https://github.com/pytries/marisa-trie.git
