--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -16,7 +16,8 @@ jobs:
       CIBW_BEFORE_BUILD: "pip install cython"
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-latest]
+        # Ubuntu 18.04 is required because the 20.04 toolchain is too new for the "manylinux1_x86_64" ABI
+        os: [ubuntu-18.04, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
