--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: "3.8"
       - name: Install cibuildwheel
         run: |
-          python -m pip install cibuildwheel==1.10.0 cython wheel
+          python -m pip install cibuildwheel==1.7.1 cython==0.29.21 wheel
       - name: Build wheels
         run: |
           make build-vendored-deps
