--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -5,6 +5,7 @@ on: push
 
 env:
   BLASTDB: blast-db
+  CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
 
 jobs:
   build_wheels:
@@ -29,7 +30,7 @@ jobs:
           python-version: "3.7"
       - name: Install cibuildwheel
         run: |
-          python -m pip install cibuildwheel==1.7.1 cython==0.29.21 wheel
+          python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
       - name: Build wheels
         run: |
           make build-vendored-deps
