--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -6,6 +6,10 @@ on: push
 env:
   BLASTDB: blast-db
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
+  CIBW_MANYLINUX_I686_IMAGE: manylinux_2_24
+  CIBW_MANYLINUX_PYPY_X86_64_IMAGE: manylinux_2_24
+  CIBW_MANYLINUX_AARCH64_IMAGE: manylinux_2_24
+  CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
 
 jobs:
   build_wheels:
@@ -17,8 +21,7 @@ jobs:
       CIBW_BEFORE_BUILD: "pip install cython"
     strategy:
       matrix:
-        # Ubuntu 18.04 is required because the 20.04 toolchain is too new for the "manylinux1_x86_64" ABI
-        os: [ubuntu-18.04, macos-latest]
+        os: [ubuntu-20.04, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
@@ -28,9 +31,8 @@ jobs:
         name: Install Python
         with:
           python-version: "3.7"
-      - name: Install cibuildwheel
-        run: |
-          python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
+      - name: Install build dependencies
+        run: python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
       - name: Build wheels
         run: |
           make build-vendored-deps
