Include tag in artifact name

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -39,5 +39,5 @@ jobs:
           python -m cibuildwheel --output-dir wheelhouse
       - uses: actions/upload-artifact@v2
         with:
-          name: wheels
+          name: wheels-${{github.event.release.tag_name}}
           path: ./wheelhouse/*.whl
