--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -19,7 +19,6 @@ jobs:
     timeout-minutes: 20
     env:
       CIBW_SKIP: "cp27-* pp*"
-      CIBW_ARCHS: "x86_64 aarch64 arm64"
       CIBW_BEFORE_BUILD: "pip install cython && cython -3 marisa-trie/src/*.pyx marisa-trie/src/*.pxd --cplus"
     strategy:
       matrix:
@@ -35,6 +34,12 @@ jobs:
           python-version: "3.7"
       - name: Install build dependencies
         run: python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
+      - name: Set wheel architectures (Linux)
+        if: ${{ matrix.os == "ubuntu-20.04" }}
+        run: export CIBW_ARCHS="x86_64 aarch64"
+      - name: Set wheel architectures (MacOS)
+        if: ${{ matrix.os == "macos-latest" }}
+        run: export CIBW_ARCHS="x86_64 arm64"
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
       - uses: actions/upload-artifact@v2
