--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -38,7 +38,7 @@ jobs:
         if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: aarch64
+          platforms: all
       - name: Install build dependencies
         run: python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
       - name: Build wheels
