--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,11 +1,9 @@
 name: Build wheels
 
 on:
-  push
-
-#  release:
-#    types:
-#      - created
+  release:
+    types:
+      - created
 
 env:
   BLASTDB: blast-db
