--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -15,9 +15,11 @@ jobs:
   build_wheels:
     name: Build wheels on ${{matrix.os}}
     runs-on: ${{matrix.os}}
-    timeout-minutes: 20
+    timeout-minutes: 30
     env:
       CIBW_SKIP: "cp27-* pp*"
+      CIBW_ARCHS_MACOS: "x86_64 arm64"
+      CIBW_ARCHS_LINUX: "x86_64 i686 aarch64"
       CIBW_BEFORE_BUILD: "pip install cython && cython -3 marisa-trie/src/*.pyx marisa-trie/src/*.pxd --cplus"
     strategy:
       matrix:
@@ -31,6 +33,11 @@ jobs:
         name: Install Python
         with:
           python-version: "3.7"
+      - name: Set up QEMU
+        if: runner.os == 'Linux'
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Install build dependencies
         run: python -m pip install cibuildwheel==1.10.0 cython==0.29.22 wheel
       - name: Build wheels
