--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,5 @@
-include *.rst
+include *.rst *.md
+recursive-include marisa-trie *.cpp *.pxd *.pyx
+recursive-include marisa-trie/marisa-trie/lib/marisa *.h *.cc
+recursive-include marisa-trie/marisa-trie/include/marisa *.h
 recursive-include test *
