--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python prerequisites
-      run: pip3 install wheel flake8 cython
+      run: pip3 install wheel ruff cython
     - name: Lint
       run: make lint
     - name: Install BLAST
