--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include *.rst *.md
+include LICENSE* *.rst *.md
 recursive-include marisa-trie *.cpp *.pxd *.pyx
 recursive-include marisa-trie/marisa-trie/lib/marisa *.h *.cc
 recursive-include marisa-trie/marisa-trie/include/marisa *.h
