Build package wheels in build make target

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.black]
 line-length = 120
+exclude = '(.+/version.py|.+/setup.py)'
 [tool.isort]
 profile = "black"
 line_length = 120
 skip_gitignore = true
+skip_glob = ["*/version.py", "*/setup.py"]
 [tool.ruff]
 line-length=120
 ignore=["E401", "F401"]
