--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ jobs:
       max-parallel: 8
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
     steps:
     - uses: actions/checkout@v4
       with:
@@ -24,7 +23,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python prerequisites
-      run: pip3 install wheel ruff setuptools marisa-trie
+      run: pip3 install build wheel ruff setuptools marisa-trie
     - name: Lint
       run: make lint
     - name: Install BLAST
@@ -35,3 +34,13 @@ jobs:
       run: make install
     - name: Test
       run: make test
+  black:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: psf/black@stable
+  isort:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: isort/isort-action@v1.1.0
